Fix(ChatList,Loading): Fixed overflow present on ChatList component, adjusted Loading style

--- a/src/App.css
+++ b/src/App.css
@@ -83,7 +83,7 @@ footer {
 }
 
 /* HTML: <div class="loader"></div> */
-.loader-container {
+.loader-main-container {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -114,30 +114,9 @@ footer {
 
 }
 
-.loader {
-  margin: auto;
-  width: 90px;
-  height: 14px;
-  color: var(--sixth-col);
-  background:
-    radial-gradient(circle 10px at right 7px top 50%, #0000 92%, currentColor),
-    radial-gradient(circle 10px at right 0 top 50%, currentColor 92%, #0000);
-  background-size: calc(100%/3) 100%;
-  background-position: 50% 0%;
-  animation: l5 .5s infinite linear;
-}
-
-@keyframes l5 {
-  100% {
-    background-position: 0% 0%
-  }
-}
-
-
-
-
 /* HTML: <div class="loader"></div> */
 .loader {
+  margin-top: 20px;
   width: 120px;
   height: 20px;
   background:
