--- a/src/components/ChatList.scss
+++ b/src/components/ChatList.scss
@@ -116,7 +116,7 @@
     border-bottom-left-radius: 40px;
     background: #202329;
     overflow-y: auto;
-    height: calc(100% - 200px);
+    height: calc(100% - 201px);
     scroll-behavior: smooth;
     box-sizing: border-box;
     flex-direction: column;
